--- a/views/partials/body_ventas.ejs
+++ b/views/partials/body_ventas.ejs
@@ -16,6 +16,26 @@
         <p class="mb-0">Siempre es buen momento</p>
         <p class="mb-2 ml-4">para darse un gusto...</p>
     </div>
-
-
+<!--
+    <div class="container bg-warning w-100 p-0 m-0">
+        <div class="row">
+            <div class="col-12  p-5">
+                <div class="media">
+                    <div class="media-body col-3 border border-dark border-3 p-3">
+                        <h4>crea un anuncio</h4>
+                        <h4>gratis</h4>
+                        <h5 class="font-weight-light">publica en solo minutos 
+                            para que tu producto esté 
+                            en frente a millones 
+                            de consumidores</h5>
+                        <a class="" href="/form_prod.ejs">
+                            <button type="button" class="btn btn-outline-dark border-3 rounded-0 m-auto font-weight-bold">vende ahora</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+-->
 </section>
