--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
                 <a class="nav-link text-black-50" href="/product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="/auth/register">Registro</i></a>
-                <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
+                <a class="nav-link text-black-50 d-none d-md-block active" href="/auth/login">Inicio de Sesión</i></a>
 
                 <!--nav mobile-->
                 <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
