--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,17 @@
     <!--header/javi -->
     <%- include("partials/header") %>
 
+      <% if (typeof errors != "undefined") { %>
+      <p>ERROR</p>
+      <ul>
+        <% for (let i=0; i<errors.length;i++) { %>
+        <li>
+          <%= errors[i].msg %>
+        </li>
+        <% } %>
+      </ul>
+      <% } %>
+
     <!--login-->
     <!-- Section es todo el contenedor -->
     <section class="container mt-5 mb-5">
