--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,7 @@
     <% if (typeof errors != "undefined") { %>
     <p>ERROR</p>
       <ul>
-        <% for (let i=0; i<errors.lenght;i++) { %> 
+        <% for (let i=0; i<errors.length;i++) { %> 
           <li>
             <%= errors[i].msg %> 
           </li>
