--- a/views/headerLogin.ejs
+++ b/views/headerLogin.ejs
@@ -40,34 +40,61 @@
                     
                     <!--nav mobile-->
                     <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
-                        data-target="#menu_desplegable">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-    
-                <div class="dropdown-divider"></div>
-                <div class="collapse navbar-collapse" id="menu_desplegable">
-                    <ul class="navbar-nav mr-auto d-sm-block d-md-none">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span
-                                    class="sr-only">(current)</span></a>
-                        </li>
+                    data-target="#menu_desplegable">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
-                        </li>
+            <div class="dropdown-divider"></div>
+            <div class="collapse navbar-collapse" id="menu_desplegable">
+                <ul class="navbar-nav mr-auto d-sm-block d-md-none">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/register"><i class="far fa-user-circle"></i> Registrate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#ofertas"><i class="fas fa-dollar-sign"></i> Ofertas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#masVendidos"><i class="far fa-bell"></i> Mas Vendidos<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-list-ul"></i> Categorias
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/products">Todos los Productos</a>
+                            <a class="dropdown-item" href="#">Variedad de Cervezas</a>
+                            <a class="dropdown-item" href="#">Presentaciones</a>
+                            <a class="dropdown-item" href="#">Promociones</a>
+                            <a class="dropdown-item" href="#">Alquileres</a>
+                            <a class="dropdown-item" href="#">Merchandesing</a>
+                            <a class="dropdown-item" href="#">Insumos</a>
+                            <a class="dropdown-item" href="#">Cursos</a>
+                            <a class="dropdown-item" href="#">Podcast</a>
+                        </div>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#footer"><i class="fas fa-headset"></i> Contacto</a>
+                    </li>
 
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/products">Todos los Productos</a>
-                                <a class="dropdown-item" href="/profile">Mi Perfil</a>
-                                <a class="dropdown-item" href="#">Mis publicaciones</a>
-                                <a class="dropdown-item" href="#">Mis compras</a>
-                            </div>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+                </ul>
+            </div>
+        </nav>
+    </div>
         
         <!--search header mobile-->
         <div class="input-group mb-3 col box-2 bg-light">
@@ -86,14 +113,32 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-list-ul"></i> Avatar / user
+                            <i class="fas fa-list-ul"></i> Categorias
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/products">Todos los Productos</a>
-                            <a class="dropdown-item" href="/profile">Mi Perfil</a>
-                            <a class="dropdown-item" href="#">Mis publicaciones</a>
-                            <a class="dropdown-item" href="#">Mis compras</a>
+                            <a class="dropdown-item" href="#">Variedad de Cervezas</a>
+                            <a class="dropdown-item" href="#">Presentaciones</a>
+                            <a class="dropdown-item" href="#">Promociones</a>
+                            <a class="dropdown-item" href="#">Alquileres</a>
+                            <a class="dropdown-item" href="#">Merchandesing</a>
+                            <a class="dropdown-item" href="#">Insumos</a>
+                            <a class="dropdown-item" href="#">Cursos</a>
+                            <a class="dropdown-item" href="#">Podcast</a>
                         </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#ofertas">Ofertas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#masVendidos">Mas Vendidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#footer">Contacto</a>
+                    </li>
     
                 </ul>
             </nav>
