--- a/views/partials/headerLogin.ejs
+++ b/views/partials/headerLogin.ejs
@@ -23,27 +23,21 @@
                 <a href="/form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
                 <a class="nav-link text-black-50" href="/product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
-            
+                
+
                 <a class="nav-link text-black-50 d-none d-md-block" href="#">Avatar</a>
 
-                <a class="nav-link text-black-50 d-none d-md-block active" href="#">User
-
-                    <li class="nav-item dropdown">
-                        
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/products">Todos los Productos</a>
-                            <a class="dropdown-item" href="#">Variedad de Cervezas</a>
-                            <a class="dropdown-item" href="#">Presentaciones</a>
-                            <a class="dropdown-item" href="#">Promociones</a>
-                            <a class="dropdown-item" href="#">Alquileres</a>
-                            <a class="dropdown-item" href="#">Merchandesing</a>
-                            <a class="dropdown-item" href="#">Insumos</a>
-                            <a class="dropdown-item" href="#">Cursos</a>
-                            <a class="dropdown-item" href="#">Podcast</a>
-                        </div>
-                    </li>
-                </a>
-
+                <li class="nav-item dropdown text-black-50 d-none d-md-block">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      fmfrancomartin@gmail.com
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Mi perfil</a>
+                      <a class="dropdown-item" href="#">Mis publicaciones</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="/">Cerrar Sesion</a>
+                    </div>
+                </li>
                 
 
                 <!--nav mobile-->
@@ -60,11 +54,17 @@
                         <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span
                                 class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/auth/register"><i class="far fa-user-circle"></i> Registrate</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
+
+                    <li class="nav-item dropdown text-black-50 d-none d-md-block">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          User
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Mi perfil</a>
+                          <a class="dropdown-item" href="#">Mis publicaciones</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Cerrar Sesión</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/#ofertas"><i class="fas fa-dollar-sign"></i> Ofertas</a>
