--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,134 +1,3 @@
-<header class="nav-header">
-    <div class="navborder">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-
-
-            <!--search / xl-->
-            <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
-                <a class="navbar-brand mr-auto" href="/">
-                    <img src="/img/header/logo_header.svg" width="120" class="d-inline-block align-top"
-                        alt="Canilla Libre">
-                </a>
-
-
-                <div class="input-group mb-3 col box-1 ml-auto">
-                    <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
-                        aria-describedby="search_header">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-warning" type="button" id="buscar_nav_header">
-                            <i class="fas fa-beer"></i></button>
-                    </div>
-                </div>
-
-                <a href="/products/vender"><button class="btn btn-outline-warning ml-auto"
-                        type="button">Vende</button></a>
-                <a class="nav-link text-black-50" href="/product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
-                <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-                <a class="nav-link text-black-50 d-none d-md-block" href="/auth/register">Registro</i></a>
-                <a class="nav-link text-black-50 d-none d-md-block active" href="/auth/login">Inicio de Sesión</i></a>
-
-                <!--nav mobile-->
-                <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
-                    data-target="#menu_desplegable">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-
-            <div class="dropdown-divider"></div>
-            <div class="collapse navbar-collapse" id="menu_desplegable">
-                <ul class="navbar-nav mr-auto d-sm-block d-md-none">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span
-                                class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/auth/register"><i class="far fa-user-circle"></i> Registrate</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#ofertas"><i class="fas fa-dollar-sign"></i> Ofertas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#masVendidos"><i class="far fa-bell"></i> Mas Vendidos<span
-                                class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-list-ul"></i> Categorias
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/products">Todos los Productos</a>
-                            <a class="dropdown-item" href="#">Variedad de Cervezas</a>
-                            <a class="dropdown-item" href="#">Presentaciones</a>
-                            <a class="dropdown-item" href="#">Promociones</a>
-                            <a class="dropdown-item" href="#">Alquileres</a>
-                            <a class="dropdown-item" href="#">Merchandesing</a>
-                            <a class="dropdown-item" href="#">Insumos</a>
-                            <a class="dropdown-item" href="#">Cursos</a>
-                            <a class="dropdown-item" href="#">Podcast</a>
-                        </div>
-                    </li>
-                    <div class="dropdown-divider"></div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#footer"><i class="fas fa-headset"></i> Contacto</a>
-                    </li>
-
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <!--search header mobile-->
-    <div class="input-group mb-3 col box-2 bg-light">
-        <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
-            aria-describedby="search_header">
-        <div class="input-group-append">
-            <button class="btn btn-outline-warning" type="button" id="buscar_nav_header">
-                <i class="fas fa-beer"></i></button>
-        </div>
-    </div>
-
-    <!--nav md-xl-->
-    <div class="prueba d.flex justify-content-end">
-        <nav class="navbar navbar-expand-md navbar-light bg-light d-none d-md-block">
-            <ul class="navbar-nav ml-auto d-flex justify-content-end align-items-center">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-list-ul"></i> Categorias
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/products">Todos los Productos</a>
-                        <a class="dropdown-item" href="#">Variedad de Cervezas</a>
-                        <a class="dropdown-item" href="#">Presentaciones</a>
-                        <a class="dropdown-item" href="#">Promociones</a>
-                        <a class="dropdown-item" href="#">Alquileres</a>
-                        <a class="dropdown-item" href="#">Merchandesing</a>
-                        <a class="dropdown-item" href="#">Insumos</a>
-                        <a class="dropdown-item" href="#">Cursos</a>
-                        <a class="dropdown-item" href="#">Podcast</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#ofertas">Ofertas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#masVendidos">Mas Vendidos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#footer">Contacto</a>
-                </li>
-
-            </ul>
-        </nav>
-    </div>
-</header>
+<!--header-->
+<% if (user == null) { %> <%-include("headerGuest") %> <% } else { %> <%-
+include("headerLog") %> <% } %>
