listo el headerLog / headerGuest

--- a/views/partials/headerGuest.ejs
+++ b/views/partials/headerGuest.ejs
@@ -1,5 +1,5 @@
 <header class="nav-header">
-    <div class="navborder">
+    <div class="navborder pl-4 pr-4 bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
 
 
@@ -85,7 +85,7 @@
         </nav>
     </div>
     <!--search header mobile-->
-    <div class="input-group mb-3 col box-2 bg-light">
+    <div class="input-group mb-3 col box-2 bg-light pl-4 pr-4 bg-light">
         <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
             aria-describedby="search_header">
         <div class="input-group-append">
@@ -95,7 +95,7 @@
     </div>
 
     <!--nav md-xl-->
-    <div class="prueba d.flex justify-content-end">
+    <div class="prueba d.flex justify-content-end pl-4 pr-4 bg-light">
         <nav class="navbar navbar-expand-md navbar-light bg-light d-none d-md-block">
             <ul class="navbar-nav ml-auto d-flex justify-content-end align-items-center">
                 <li class="nav-item dropdown">
