--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,3 @@
 <!--header-->
-<% if (user == null) { %> <%-include("headerGuest") %> <% } else { %> <%-
-include("headerLog") %> <% } %>
+<% if (user == null) { %> <%-include("headerGuest") %> <% } else { %>
+<%-include("headerLog") %> <% } %>
