--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -15,9 +15,9 @@
                             <i class="fas fa-beer"></i></button>
                     </div>
                 </div>
-                <a href="/form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
+                <a href="vender"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
-                <a class="nav-link text-black-50" href="/product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
+                <a class="nav-link text-black-50" href="/product_cart"><i class="fas fa-shopping-basket"></i></a>
 
                 <a class="nav-link text-black-50 d-none d-md-block" href="/auth/profile"><img src="<%= user.avatar %>" width="38" class="rounded-circle shadow-sm" alt=""></a>
                 <li class="nav-item dropdown text-black-50 d-none d-md-block">
