--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,40 +4,136 @@
     <body class="bg_color">
         <%- include("partials/header") %>
 
-        <div class="container p-5">
-            <div class="row">
-                <div class="card mb-3" style="max-width: 540px;">
+        <section
+            class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn"
+        >
+            <div class="row minh-100 d-flex mt-5 mb-5">
+                <div class="card mb-3 p-5" style="max-width: 550px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <img
                                 src="<%= user.avatar %> "
                                 class="card-img"
-                                alt="..."
-                            />
+                                alt="user"
+                            /><br />
+                            <small class="text-muted"
+                                ><i class="far fa-address-card"></i> id User:
+                                <%= user.id %>
+                            </small>
                         </div>
                         <div class="col-md-8">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    <small class="text-muted"
-                                        >ID-USER: <%= user.id %>
-                                    </small>
-                                </p>
-                                <h5 class="card-title">
+                            <div class="card-body pt-0 pl-4">
+                                <h4 class="card-title">
                                     <%= user.firstname +" "+ user.lastname %>
-                                </h5>
+                                </h4>
+                                <div class="dropdown-divider"></div>
                                 <p class="card-email">
-                                    Email: <%= user.email %>
+                                    <i class="fas fa-mail-bulk"></i> <%=
+                                    user.email %>
                                 </p>
                                 <p class="card-text">
                                     <small class="text-muted"
-                                        >Last updated 3 mins ago</small
+                                        >Fecha de nacimiento:
+                                    </small>
+                                    <br />
+                                    <small class="text-muted"
+                                        >Nacionalidad:
+                                    </small>
+                                    <br />
+                                    <button
+                                        type="submit"
+                                        class="btn btn-outline-secondary mt-2"
                                     >
+                                        <i class="fas fa-key"></i> Cambiar
+                                        contraseña
+                                    </button>
                                 </p>
+                                <div class="dropdown-divider"></div>
                             </div>
+                        </div>
+                        <!-- editar / borrar -->
+                        <div
+                            class="box-edit col-12 d-flex justify-content-around"
+                        >
+                            <a href="#definir_rutas">
+                                <button
+                                    type="submit"
+                                    class="btn btn-light mr-2 text"
+                                    style="font-size: 0.8em;"
+                                >
+                                    <i class="far fa-edit"></i> Editar Perfil
+                                </button>
+                            </a>
+                            <button
+                                type="submit"
+                                class="btn btn-danger ml-2"
+                                style="font-size: 0.8em;"
+                                data-toggle="modal"
+                                data-target="#Eliminar_Modal"
+                            >
+                                <i class="far fa-trash-alt"></i> Eliminar Perfil
+                            </button>
+                            <!--Buttom Alert-->
+                            <div
+                                class="modal fade"
+                                id="Eliminar_Modal"
+                                tabindex="-1"
+                                role="dialog"
+                                aria-labelledby="Eliminar_Modal_label"
+                                aria-hidden="true"
+                            >
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5
+                                                class="modal-title"
+                                                id="Eliminar_Modal_label"
+                                            >
+                                                ¿Está seguro que desea eliminar
+                                                el perfil?
+                                            </h5>
+                                            <button
+                                                type="button"
+                                                class="close"
+                                                data-dismiss="modal"
+                                                aria-label="Close"
+                                            >
+                                                <span aria-hidden="true"
+                                                    >&times;</span
+                                                >
+                                            </button>
+                                        </div>
+
+                                        <div class="modal-footer">
+                                            <button
+                                                type="button"
+                                                class="btn btn-outline-secondary text-secondary"
+                                                data-dismiss="modal"
+                                            >
+                                                NO
+                                            </button>
+                                            <form
+                                                action="#definir_rutas"
+                                                method="POST"
+                                            >
+                                                <button
+                                                    type="submit"
+                                                    class="btn btn-outline-warning ml-2 text-warning"
+                                                >
+                                                    SI
+                                                </button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Buttom Alert-->
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <!--footer-->
+        <%- include("partials/footer") %>
     </body>
 </html>
