--- a/views/partials/headerLogin.ejs
+++ b/views/partials/headerLogin.ejs
@@ -1,3 +1,4 @@
+
 <header class="nav-header">
     <div class="navborder">
         <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
@@ -17,7 +18,7 @@
                     <div class="input-group-append">
                         <button class="btn btn-outline-warning" type="button" id="buscar_nav_header">
                             <i class="fas fa-beer"></i></button>
-                    </div>
+                    </div> 
                 </div>
 
                 <a href="/form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
@@ -35,7 +36,7 @@
                       <a class="dropdown-item" href="#">Mi perfil</a>
                       <a class="dropdown-item" href="#">Mis publicaciones</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="/">Cerrar Sesion</a>
+                      <a class="dropdown-item" href="/auth/logout">Cerrar Sesion</a>
                     </div>
                 </li>
                 
