maquetado profile terminado

--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -15,7 +15,7 @@
                             <i class="fas fa-beer"></i></button>
                     </div>
                 </div>
-                <a href="vender"><button class="btn btn-outline-warning ml-auto"
+                <a href="/form_prod"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
                 <a class="nav-link text-black-50" href="/product_cart"><i class="fas fa-shopping-basket"></i></a>
 
