--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,10 @@
             class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn"
         >
             <div class="row minh-100 d-flex mt-5 mb-5">
-                <div class="card mb-3 p-5" style="max-width: 550px;">
+                <div
+                    class="card mb-3 pt-5 pr-5 pl-5 pb-4"
+                    style="max-width: 550px;"
+                >
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <img
@@ -48,12 +51,11 @@
                                         contraseña
                                     </button>
                                 </p>
-                                <div class="dropdown-divider"></div>
                             </div>
                         </div>
                         <!-- editar / borrar -->
                         <div
-                            class="box-edit col-12 d-flex justify-content-around"
+                            class="box-edit col-12 d-flex justify-content-around border-top pt-4 mb-0"
                         >
                             <a href="#definir_rutas">
                                 <button
