arreglo boton VENDER y aplicacion de Middleware para user logueados

--- a/views/partials/headerGuest.ejs
+++ b/views/partials/headerGuest.ejs
@@ -20,7 +20,7 @@
                     </div>
                 </div>
 
-                <a href="/products/vender"><button class="btn btn-outline-warning ml-auto"
+                <a href="/form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
                 <a class="nav-link text-black-50" href="/product_cart"><i class="fas fa-shopping-basket"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
