--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -15,11 +15,7 @@
                             <i class="fas fa-beer"></i></button>
                     </div>
                 </div>
-<<<<<<< HEAD
-                <a href="/form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
-=======
-                <a href="/form_prod"><button class="btn btn-outline-warning ml-auto"
->>>>>>> 406c95886a126a22596685db4ea0c303e64952a3
+                <a href="/products/form_prod"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
                 <a class="nav-link text-black-50" href="/product_cart"><i class="fas fa-shopping-basket"></i></a>
 
