solucionado boton vender

--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -19,7 +19,7 @@
                         type="button">Vende</button></a>
                 <a class="nav-link text-black-50" href="/product_cart"><i class="fas fa-shopping-basket"></i></a>
 
-                <a class="nav-link text-black-50 d-none d-md-block" href="/auth/profile"><img src="<%= user.avatar %>" width="38" class="rounded-circle shadow-sm" alt=""></a>
+                <a class="nav-link text-black-50 d-none d-md-block" href="/auth/profile"><img src="<%= user.avatar %>" width="38" height="38" class="rounded-circle shadow-sm" alt=""></a>
                 <li class="nav-item dropdown text-black-50 d-none d-md-block">
                     <a class="nav-link dropdown-toggle text-black-50" href="/auth/profile" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
