carousel de categorias al 80%

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,8 +51,9 @@
 }
 
 /*-----------CATEGORIAS-----------*/
-
-/*Carousel*/
+.carosel-next {
+    font-size: 2em;
+}
 
 /*--------------VENDE--------------*/
 .border-3 {
