--- a/views/partials/body_categorias.ejs
+++ b/views/partials/body_categorias.ejs
@@ -1,70 +1,224 @@
 <section class="categorias">
-  <div class="categorias-title">
-    <h2 class="title_categoria border-bottom">Categorías</h2>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <ul
-          class="list-group list-group-horizontal-lg mb-5 p-0 d-flex justify-content-center"
-        >
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img class="mr-3" src="img/categorias/ale.svg" alt="ale" />
-              </a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img class="mr-3" src="img/categorias/ipa.svg" alt="ipa" />
-              </a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img class="mr-3" src="img/categorias/trigo.svg" alt="trigo" />
-              </a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img class="mr-3" src="img/categorias/stout.svg" alt="stout" />
-              </a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img
-                  class="mr-3"
-                  src="img/categorias/lambic.svg"
-                  alt="lambic"
-                />
-              </a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img class="mr-3" src="img/categorias/trigo.svg" alt="trigo" />
-              </a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#">
-                <img class="mr-3" src="img/categorias/stout.svg" alt="stout" />
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
+    <div class="categorias-title">
+        <h2 class="title_categoria border-bottom">Categorías</h2>
     </div>
-  </div>
+    <section class="container mb-5">
+        <div
+            id="carouselExampleIndicators"
+            class="carousel slide container"
+            data-ride="carousel"
+        >
+            <ol class="carousel-indicators">
+                <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="0"
+                    class="active"
+                ></li>
+                <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="1"
+                ></li>
+                <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="2"
+                ></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active row">
+                    <div class="row">
+                        <div class="col-4 col-md-2">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaAle">
+                                        <img
+                                            src="/img/categorias/ale.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaIpa">
+                                        <img
+                                            src="/img/categorias/ipa.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaLambic">
+                                        <img
+                                            src="/img/categorias/lambic.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
 
-  <!--fin de carousel-->
+                        <div class="col-md-2 d-md-block d-none">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaPorter">
+                                        <img
+                                            src="/img/categorias/porter.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-md-block d-none">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaPilsen">
+                                        <img
+                                            src="/img/categorias/pilsen.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-md-block d-none">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaSinAlc">
+                                        <img
+                                            src="/img/categorias/sinAlc.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--segunda vuelta-->
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-4 col-md-2">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaStout">
+                                        <img
+                                            src="/img/categorias/stout.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaLager">
+                                        <img
+                                            src="/img/categorias/lager.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaEspeciales">
+                                        <img
+                                            src="/img/categorias/especiales.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 d-md-block d-none">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaTrigo">
+                                        <img
+                                            src="/img/categorias/trigo.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-md-block d-none">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaInsumos">
+                                        <img
+                                            src="/img/categorias/insumos.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-md-block d-none">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <a href="#productosCategoriaOfertas">
+                                        <img
+                                            src="/img/categorias/ofertas.png"
+                                            width="150"
+                                            alt="ale"
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a
+                class="carousel-control-prev"
+                href="#carouselExampleIndicators"
+                role="button"
+                data-slide="prev"
+            >
+                <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a
+                class="carousel-control-next"
+                href="#carouselExampleIndicators"
+                role="button"
+                data-slide="next"
+            >
+                <i
+                    class="carosel-next far fa-arrow-alt-circle-right text-secondary"
+                ></i>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <!--fin de carousel-->
+    </section>
 </section>
