--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,9 +74,9 @@
               <input
                 class="form-check-input"
                 type="checkbox"
-                name="politic"
+                name="recordarme"
                 value=""
-                id="politic"
+                id="recordarme"
               />
               <label class="form-check-label" for="politic">
                 Recordarme
