--- a/views/partials/editButtons.ejs
+++ b/views/partials/editButtons.ejs
@@ -8,59 +8,35 @@
     </a>
     
         <form action="<%= product.id %>/delete?_method=delete" method="POST">
-            <button type="submit" class="btn btn-outline-danger mr-2">
+          
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-outline-danger mr-2" data-toggle="modal" data-target="#staticBackdrop" data-backdrop="false" data-dismiss="modal">
                 <i class="far fa-edit"></i> Eliminar Publicación
             </button>
-        </form>
-
-        <!-- ARREGLAR LA VENTANA MODAL QUE HAGA CONFIRMACION ANTES DE ELIMINAR -->
-        <!-- Buttom Alert -->
-        <!-- <div
-        class="modal fade"
-        id="Eliminar_Modal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="Eliminar_Modal_label"
-        aria-hidden="true"
-    >
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="Eliminar_Modal_label">
-                        ¿Está seguro que desea eliminar el producto?
-                    </h5>
-                    <button
-                        type="button"
-                        class="close"
-                        data-dismiss="modal"
-                        aria-label="Close"
-                    >
+            
+            <!-- Modal -->
+            <div class="modal" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Eliminar Publicación</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
+                    </div>
+                    <div class="modal-body">
+                    ¿ Esta seguro que desea eliminar este producto ? <br>
+                    Una vez que elimine este producto no lo volvera a ver nunca más, a menos claro, que tenga un delorean y un poco de plutonio.
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                    <button type="submit" class="btn btn-primary">Si</button>
+                    </div>
                 </div>
-
-                <div class="modal-footer">
-                    <button
-                        type="button"
-                        class="btn btn-outline-secondary text-secondary"
-                        data-dismiss="modal"
-                    >
-                        NO
-                    </button>
-                    <form
-                        action="<%= product.id %>/delete?_method=delete"
-                        method="POST"
-                    >
-                        <button
-                            type="submit"
-                            class="btn btn-outline-warning ml-2 text-warning"
-                        >
-                            SI
-                        </button>
-                    </form>
                 </div>
             </div>
-        </div>
-    </div> -->
+
+        </form>
+    
     </div>
 </div>
