--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,8 @@
 <title><%= title %> - Canilla Libre - BeerMarket®</title>
 
 <!--favicon-->
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
 <link rel="manifest" href="/img/favicon/site.webmanifest" />
 <link
     rel="mask-icon"
@@ -29,10 +29,6 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
     crossorigin="anonymous"
 />
-
-<!-- OWL carousel -->
-<link rel="stylesheet" href="/css/owl.carousel.min.css" />
-<link rel="stylesheet" href="/css/owl.theme.default.min.css" />
 
 <!-- Font Awesome Stylesheet -->
 <link
